--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://role_1229287322:G7G7gFyQO6836QURD1EQVLOzC5Q8RVP1@db-1229287322.db003.hosteddb.reai.io:5432/1229287322?connect_timeout=15"
+DATABASE_URL="postgresql://postgres.krbekiyqetnymkzosbua:[MaxineSmith889!]@aws-1-eu-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
