--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres.krbekiyqetnymkzosbua:[MaxineSmith889!]@aws-1-eu-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DATABASE_URL="postgresql://postgres.krbekiyqetnymkzosbua:MaxineSmith889!@aws-1-eu-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
